# grobner-negativity

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: compute_neg_for_latex.py  ibmq_two_feature_batched.py  noise_correction.py  run_experiment.py  run_svm_analysis.py  sim_be_classification_20260222_214335.json  sim_negativity_chirality_20260219_133602.json  simulate_be_many.py  simulate_negativity_chirality_many.py  svm_classifier.json  svm_classifier.pkl  two_feature_svm.py
data/: SIM_qubit_qutrit_results.json
manuscript/: SI_nature_physics.tex  Sk_multicopy_derivation.tex  graphic_story.tex  manuscript_nature_physics.tex  verify_RRT_approach.py  verify_ccnr_range.py  verify_svm_small_a.py
negativity_si/: __init__.py  analysis.py  analysis_qubit_qutrit.py  calibration.py  circuits.py  circuits_qubit_qutrit.py  config.py  experiment.py  experiment_qubit_qutrit.py  maxlik.py  maxlik_qubit_qutrit.py  run_all_experiments.py  run_all_validations.py  simulate_chirality_torino.py  simulations.py  states.py  states_qubit_qutrit.py  validation.py
negativity_si/chirality/: __init__.py
negativity_si/chirality/qubit_qubit/: __init__.py  analysis.py  circuits.py  maxlik.py  states.py
negativity_si/chirality/qubit_qutrit/: __init__.py  analysis.py  circuits.py  maxlik.py  states.py
negativity_si/common/: __init__.py  circuit_utils.py  noise_models.py  states.py
negativity_si/data/IBM Kingston/: kingston_calibration.csv
negativity_si/data/IBM Torino/: ibm_torino_calibrations_2026-01-10T06_45_42Z.csv
negativity_si/negativity/: __init__.py
negativity_si/negativity/qubit_qubit/: __init__.py  analysis.py  maxlik.py
negativity_si/negativity/qubit_qutrit/: __init__.py  analysis.py  circuits.py  maxlik.py  states.py
tests/: test_negativity.py
verification/: verify_all.py
